# PayaBase

./: .gitignore  README.md
training_agent/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  pyproject.toml
training_agent/api/: __init__.py  deps.py  main.py
training_agent/api/middleware/: auth.py
training_agent/api/routers/: agent.py  auth.py  chat.py  departments.py  docs.py  kb.py  pdf.py  platform.py  ppt.py  retrieval_test.py  sources.py  stats.py
training_agent/api/schemas/: agent.py  chat.py  common.py  doc.py  kb.py  platform.py  sources.py  stats.py
training_agent/celery-service/: Dockerfile  requirements.txt
training_agent/core/: auth.py  config.py  exceptions.py  permissions.py
training_agent/core/adapters/: __init__.py  base.py  feishu.py  qq.py  registry.py  wechat.py
training_agent/core/agent/: __init__.py  executor.py  intent.py  orchestrator.py  persistence.py  planner.py  policy.py  prompt.py  request_router.py  router.py  runner.py  state.py  strategy.py
training_agent/core/application/: __init__.py
training_agent/core/chat/: __init__.py  answer_flow.py  artifact_flow.py  attachment_service.py  autonomous_flow.py  chat_context.py  chat_pipeline.py  chat_state.py  completion_flow.py  conversation_dto.py  conversation_service.py  finalize_flow.py  rag_flow.py  routing_flow.py  stream_events.py  stream_types.py  web_search_state.py
training_agent/core/domain/: __init__.py
training_agent/core/embedding/: __init__.py  client.py
training_agent/core/llm/: client.py  factory.py  profiles.py
training_agent/core/memory/: buffer.py
training_agent/core/prompts/: __init__.py  agent.py  chat.py  indexing.py  platform.py  ppt.py  router.py  (+1 more)
training_agent/docs/: agent-concurrency-regression-after-history-window.md  agent-concurrency-regression-last.md  agent-engineering-implementation-plan.md  agent-engineering-priority-plan.md  agent-mvp-final-acceptance.md  agent-refactor-execution-plan.md  autonomous-agent-execution-plan.md  autonomous-agent-plan.md  chat_pipeline_smoke_test.md  memory-stability-regression-last.md  mimo-concurrency-probe-last.md  mimo-concurrency-probe-long-last.md  mimo-stream-concurrency-probe-last.md  mvp-agent-regression-last.md  mvp-agent-regression-template.md  repair-report-2026-05-17.md  search-optimization-report-2026-05-18.md  single-agent-unified-plan-v3.md  single-agent-unified-plan.md  smoke-test-chat-pipeline.md
training_agent/infra/: docker-compose.yaml  service-images.Dockerfile
training_agent/migrations/: env.py
training_agent/models/: db.py  tables.py
training_agent/scripts/: README_test_data.md  add_chunk_count.py  agent_concurrency_regression.py  bulk_reindex_old_docs.py  cleanup_temp.py  init_db.py  init_test_data.py  load_test_backend.py  memory_stability_regression.py  migration_add_document_source.sql  migration_add_platform_adapter.sql  migration_add_rag_optimization.sql  migration_add_vector_and_hash.sql  migration_vector_512.sql  mimo_concurrency_probe.py  mvp_agent_regression.py  rebuild_chunk_contexts.py  rebuild_lexical_index.py  reset_test_data.py  search_regression.py  upload_test_documents.py
training_agent/services/: chat_service.py  doc_service.py  kb_service.py
training_agent/tests/: conftest.py  test_infra_clients.py  test_lexical_index.py  test_phase3_integration_pg.py  test_phase4_integration_pg.py  test_phase4_unit.py  test_retriever_phase2.py  test_retriever_phase3.py  test_retriever_score.py  test_smoke.py
training_agent/workers/: indexing.py
(+121 files in other folders)
