[project]
name = "payabase-api"
version = "0.1.0"
description = "PayaBase - Personal AI Knowledge Base Platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "pgvector>=0.3.0",
    "redis>=5.2.0",
    "minio>=7.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "pypdf>=5.1.0",
    "pypdfium2>=4.0.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "httpx>=0.28.0",
    "celery>=5.4.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
    # LangChain for document parsing
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    # LLM
    "openai>=1.0.0",
    # PDF export
    "markdown>=3.5.0",
    "fpdf2>=2.8.0",
    # PPT generation
    "python-pptx>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["api", "core", "models"]

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "models"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
